--- a/site/index.html
+++ b/site/index.html
@@ -73,6 +73,10 @@ user=></code></pre>
                 <p>Issues can be filed on <a href="https://github.com/Lokeh/plum/">GitHub</a>.</p>
                 <p>Questions are best answered on the <a href="https://clojurians.net" >Clojurians Slack</a>
                     group in channel <code>#plum</code></p>
+
+                <br />
+                <hr />
+                <p>Copyright 2019 Will Acton and <a href="https://github.com/Lokeh/plum/graphs/contributors">contributors</a>. Licensed under <a href="https://github.com/Lokeh/plum/blob/master/LICENSE">EPL 2.0</a>.</p>
         </div>
     </body>
 </html>
