--- a/site/index.html
+++ b/site/index.html
@@ -46,7 +46,7 @@ clojure -A:plum/add clj-time 0.15.0
 Adding dep clj-time 0.15.0 to deps.edn.
 Success!</code></pre>
                 <p>To start a REPL and start exploring, <code>plum repl</code> will
-                    start Clojure with readline, syntax highlighting, and autocomplate:</p>
+                    start Clojure with readline, syntax highlighting, and autocomplete:</p>
                 <pre class="code-snippet">$ <strong>plum repl</strong><code>
 clojure -A:plum/repl
 Downloading: clj-time/clj-time/0.15.0/clj-time-0.15.0.pom from https://repo.clojars.org/
