--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-	      <title>Will Acton // Software Developer</title>
+	      <title>Plum: A delightful tool for managing Clojure projects</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto+Slab" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
     </head>
